web-ingress/web-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web 
  template:
    metadata:
      labels:
        app: web 
    spec:
      containers:
      - name: web 
        image: gcr.io/google-samples/hello-app:1.0 
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web 
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 8080
